# freeimage

./: CMakeLists.txt  Makefile.srcs  _references.txt  deployment.rc  fipMakefile.srcs  freeimage.sln  freeimage.vcxproj  nord_freeimage.vcxproj  nord_freeimage.vcxproj.filters
Examples/Generic/: LoadFromMemory-classified.cpp  LoadFromMemory.cpp
Examples/OpenGL/TextureManager/: TextureManager.cpp
Source/: FreeImage.h  Quantizers.h  Utilities.h
Source/DeprecationManager/: DeprecationMgr.cpp
Source/FreeImage/: BitmapAccess.cpp  ColorLookup.cpp  ConversionFloat.cpp  ConversionRGBAF.cpp  ConversionType.cpp  FreeImage.cpp  Halftoning.cpp  J2KHelper.cpp  MNGHelper.cpp  MultiPage.cpp  NNQuantizer.cpp  PSDParser.cpp  PSDParser.h  Plugin.cpp  PluginBMP.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJ2K.cpp  PluginJP2.cpp  PluginJPEG.cpp  PluginJXR.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNG.cpp  PluginPNM.cpp  PluginRAS.cpp  PluginRAW.cpp  PluginTARGA.cpp  PluginTIFF.cpp  PluginWBMP.cpp  PluginWebP.cpp  PluginXBM.cpp  PluginXPM.cpp  TIFFLogLuv.cpp  ToneMapping.cpp  (+7 more)
Source/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  Filters.h  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp
Source/Metadata/: Exif.cpp  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
TestAPI/: testThumbnail.cpp
Wrapper/FreeImagePlus/src/: fipWinImage.cpp
aaa_jpeg/: cdjpeg.h  cjpeg.c  djpeg.c  rdbmp.c  rdgif.c  wrbmp.c  wrgif.c  wrppm.c
aaa_jxr/: CMakeLists.txt
aaa_openexr/: CMakeLists.txt
aaa_png/: CMakeLists.txt
aaa_tiff4/: tiffiop.h
aaa_webp/src/dec/: dec.webp.c
aaa_webp/src/dsp/: dsp.h
aaa_webp/src/enc/: cost.h  enc.syntax.c  enc.vp8l.c
aaa_webp/src/webp/: decode.h  demux.h  encode.h  mux_types.h
include/FreeImage/: MapIntrospector.h  StricterUtilities.h  Utilities.h
jpeg/: rdppm.c  rdrle.c
jxr/: CMakeLists.txt
jxr/image/decode/: JXRTranscode.c  postprocess.c  segdec.c
jxr/jxrgluelib/: JXRGlueJxr.c
openexr/: CMakeLists.txt
openexr/include/openexr/: half.h
openjpeg/: indexbox_manager.h  openjpeg.h
png/: CMakeLists.txt
webp/src/dec/: webpi.h
webp/src/enc/: enc.frame.c  histogram.h  vp8li.h
webp/src/utils/: bit_reader_inl.h
webp/src/webp/: mux.h
